indexer.c

#line 1 "indexer.rl"


#line 437 "indexer.rl"



#line 10 "indexer.c"
static const unsigned char _osmkeys_eof_actions[] = {
	0, 0, 2, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 2, 0, 0, 
	0, 0, 0, 2, 0, 0, 0, 0, 
	0, 0, 2, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 2, 2, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 14, 14, 14, 14, 14, 14, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 19, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	27, 9, 9, 9, 9, 9, 28, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 36, 36, 36, 36, 36, 36, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 37, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 38, 0, 0, 0, 0, 0, 39, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 2, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 36, 36, 36, 
	36, 36, 36, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 37, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 38, 0, 0, 0, 
	0, 0, 39, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 14, 14, 14, 14, 
	14, 14, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 19, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 27, 9, 9, 9, 9, 
	9, 28, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 9, 9, 
	9, 9, 9, 9, 9, 9, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 2, 2, 0, 0, 2, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0
};

static const int osmkeys_start = 612;
static const int osmkeys_error = 0;

static const int osmkeys_en_main = 612;


#line 440 "indexer.rl"

#define BUFSIZE 128
#include "ifileindexer.hpp"
int scanner(OSMWorld & world,const char *s)
{
  int cs;
  int res = 0;
  string currenttoken;
  char *p= (char *)s;
  char *pe = (char *)s + strlen(s) +1 ;
  char *eof = 0;    
  
#line 113 "indexer.c"
	{
	cs = osmkeys_start;
	}

#line 452 "indexer.rl"
  
#line 120 "indexer.c"
	{
	int _ps = 0;
	if ( p == pe )
		goto _test_eof;
	if ( cs == 0 )
		goto _out;
_resume:
	switch ( cs ) {
case 612:
	switch( (*p) ) {
		case 32: goto tr659;
		case 47: goto tr16;
		case 60: goto tr660;
		case 62: goto tr0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr659;
	goto tr1;
case 0:
	goto _out;
case 613:
	switch( (*p) ) {
		case 32: goto tr659;
		case 47: goto tr16;
		case 60: goto tr661;
		case 62: goto tr0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr659;
	goto tr1;
case 1:
	if ( (*p) == 62 )
		goto tr0;
	goto tr1;
case 614:
	if ( (*p) == 32 )
		goto tr662;
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr662;
	goto tr1;
case 2:
	switch( (*p) ) {
		case 47: goto tr3;
		case 98: goto tr4;
		case 109: goto tr5;
		case 110: goto tr6;
		case 111: goto tr7;
		case 114: goto tr8;
		case 116: goto tr9;
		case 119: goto tr10;
	}
	goto tr2;
case 3:
	switch( (*p) ) {
		case 110: goto tr11;
		case 114: goto tr12;
		case 119: goto tr13;
	}
	goto tr1;
case 4:
	if ( (*p) == 111 )
		goto tr14;
	goto tr1;
case 5:
	if ( (*p) == 100 )
		goto tr15;
	goto tr1;
case 6:
	if ( (*p) == 101 )
		goto tr16;
	goto tr1;
case 7:
	if ( (*p) == 101 )
		goto tr17;
	goto tr1;
case 8:
	if ( (*p) == 108 )
		goto tr18;
	goto tr1;
case 9:
	if ( (*p) == 97 )
		goto tr19;
	goto tr1;
case 10:
	if ( (*p) == 116 )
		goto tr20;
	goto tr1;
case 11:
	if ( (*p) == 105 )
		goto tr21;
	goto tr1;
case 12:
	if ( (*p) == 111 )
		goto tr22;
	goto tr1;
case 13:
	if ( (*p) == 110 )
		goto tr16;
	goto tr1;
case 14:
	if ( (*p) == 97 )
		goto tr23;
	goto tr1;
case 15:
	if ( (*p) == 121 )
		goto tr16;
	goto tr1;
case 16:
	if ( (*p) == 111 )
		goto tr24;
	goto tr1;
case 17:
	if ( (*p) == 117 )
		goto tr25;
	goto tr1;
case 18:
	if ( (*p) == 110 )
		goto tr26;
	goto tr1;
case 19:
	if ( (*p) == 100 )
		goto tr27;
	goto tr1;
case 20:
	if ( (*p) == 115 )
		goto tr28;
	goto tr1;
case 615:
	switch( (*p) ) {
		case 32: goto tr28;
		case 47: goto tr16;
		case 60: goto tr663;
		case 62: goto tr0;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr28;
	goto tr1;
case 21:
	switch( (*p) ) {
		case 47: goto tr3;
		case 98: goto tr29;
		case 109: goto tr30;
		case 110: goto tr31;
		case 114: goto tr32;
		case 116: goto tr33;
		case 119: goto tr34;
	}
	goto tr2;
case 22:
	if ( (*p) == 111 )
		goto tr35;
	goto tr1;
case 23:
	if ( (*p) == 117 )
		goto tr36;
	goto tr1;
case 24:
	if ( (*p) == 110 )
		goto tr37;
	goto tr1;
case 25:
	if ( (*p) == 100 )
		goto tr38;
	goto tr1;
case 26:
	if ( (*p) == 115 )
		goto tr39;
	goto tr1;
case 616:
	switch( (*p) ) {
		case 32: goto tr39;
		case 60: goto tr664;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr39;
	goto tr1;
case 27:
	switch( (*p) ) {
		case 98: goto tr29;
		case 109: goto tr30;
		case 110: goto tr31;
		case 114: goto tr32;
		case 116: goto tr33;
		case 119: goto tr34;
	}
	goto tr2;
case 28:
	if ( (*p) == 101 )
		goto tr40;
	goto tr1;
case 29:
	if ( (*p) == 109 )
		goto tr41;
	goto tr1;
case 30:
	if ( (*p) == 98 )
		goto tr42;
	goto tr1;
case 31:
	if ( (*p) == 101 )
		goto tr43;
	goto tr1;
case 32:
	if ( (*p) == 114 )
		goto tr44;
	goto tr1;
case 617:
	switch( (*p) ) {
		case 32: goto tr324;
		case 60: goto tr664;
		case 97: goto tr665;
		case 99: goto tr666;
		case 105: goto tr667;
		case 107: goto tr102;
		case 108: goto tr668;
		case 114: goto tr669;
		case 116: goto tr670;
		case 117: goto tr671;
		case 118: goto tr672;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr324;
	goto tr95;
case 618:
	switch( (*p) ) {
		case 32: goto tr324;
		case 47: goto tr52;
		case 60: goto tr673;
		case 62: goto tr45;
		case 97: goto tr674;
		case 99: goto tr675;
		case 105: goto tr676;
		case 107: goto tr233;
		case 108: goto tr677;
		case 114: goto tr678;
		case 116: goto tr679;
		case 117: goto tr680;
		case 118: goto tr681;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr324;
	goto tr226;
case 33:
	if ( (*p) == 62 )
		goto tr45;
	goto tr1;
case 34:
	switch( (*p) ) {
		case 47: goto tr46;
		case 98: goto tr29;
		case 109: goto tr30;
		case 110: goto tr31;
		case 114: goto tr32;
		case 116: goto tr33;
		case 119: goto tr34;
	}
	goto tr2;
case 35:
	switch( (*p) ) {
		case 110: goto tr47;
		case 114: goto tr48;
		case 119: goto tr49;
	}
	goto tr1;
case 36:
	if ( (*p) == 111 )
		goto tr50;
	goto tr1;
case 37:
	if ( (*p) == 100 )
		goto tr51;
	goto tr1;
case 38:
	if ( (*p) == 101 )
		goto tr52;
	goto tr1;
case 39:
	if ( (*p) == 101 )
		goto tr53;
	goto tr1;
case 40:
	if ( (*p) == 108 )
		goto tr54;
	goto tr1;
case 41:
	if ( (*p) == 97 )
		goto tr55;
	goto tr1;
case 42:
	if ( (*p) == 116 )
		goto tr56;
	goto tr1;
case 43:
	if ( (*p) == 105 )
		goto tr57;
	goto tr1;
case 44:
	if ( (*p) == 111 )
		goto tr58;
	goto tr1;
case 45:
	if ( (*p) == 110 )
		goto tr52;
	goto tr1;
case 46:
	if ( (*p) == 97 )
		goto tr59;
	goto tr1;
case 47:
	if ( (*p) == 121 )
		goto tr52;
	goto tr1;
case 48:
	switch( (*p) ) {
		case 100: goto tr60;
		case 111: goto tr61;
	}
	goto tr1;
case 49:
	if ( (*p) == 100 )
		goto tr62;
	goto tr1;
case 50:
	if ( (*p) == 101 )
		goto tr63;
	goto tr1;
case 51:
	if ( (*p) == 101 )
		goto tr64;
	goto tr1;
case 52:
	if ( (*p) == 108 )
		goto tr65;
	goto tr1;
case 53:
	if ( (*p) == 97 )
		goto tr66;
	goto tr1;
case 54:
	if ( (*p) == 116 )
		goto tr67;
	goto tr1;
case 55:
	if ( (*p) == 105 )
		goto tr68;
	goto tr1;
case 56:
	if ( (*p) == 111 )
		goto tr69;
	goto tr1;
case 57:
	if ( (*p) == 110 )
		goto tr70;
	goto tr1;
case 58:
	if ( (*p) == 97 )
		goto tr71;
	goto tr2;
case 59:
	if ( (*p) == 103 )
		goto tr72;
	goto tr2;
case 619:
	switch( (*p) ) {
		case 32: goto tr324;
		case 60: goto tr664;
		case 97: goto tr665;
		case 99: goto tr666;
		case 105: goto tr667;
		case 107: goto tr102;
		case 108: goto tr668;
		case 114: goto tr669;
		case 116: goto tr670;
		case 117: goto tr671;
		case 118: goto tr672;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr324;
	goto tr682;
case 60:
	if ( (*p) == 99 )
		goto tr74;
	goto tr73;
case 61:
	if ( (*p) == 116 )
		goto tr75;
	goto tr73;
case 62:
	if ( (*p) == 105 )
		goto tr76;
	goto tr73;
case 63:
	if ( (*p) == 111 )
		goto tr77;
	goto tr73;
case 64:
	if ( (*p) == 110 )
		goto tr78;
	goto tr73;
case 65:
	if ( (*p) == 61 )
		goto tr79;
	goto tr73;
case 66:
	switch( (*p) ) {
		case 34: goto tr80;
		case 39: goto tr80;
	}
	goto tr73;
case 67:
	switch( (*p) ) {
		case 34: goto tr73;
		case 39: goto tr73;
	}
	goto tr81;
case 68:
	switch( (*p) ) {
		case 34: goto tr82;
		case 39: goto tr82;
	}
	goto tr81;
case 620:
	switch( (*p) ) {
		case 32: goto tr193;
		case 60: goto tr664;
		case 97: goto tr665;
		case 99: goto tr666;
		case 105: goto tr667;
		case 107: goto tr102;
		case 108: goto tr668;
		case 114: goto tr669;
		case 116: goto tr670;
		case 117: goto tr671;
		case 118: goto tr672;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr193;
	goto tr95;
case 69:
	if ( (*p) == 104 )
		goto tr83;
	goto tr73;
case 70:
	if ( (*p) == 97 )
		goto tr84;
	goto tr73;
case 71:
	if ( (*p) == 110 )
		goto tr85;
	goto tr73;
case 72:
	if ( (*p) == 103 )
		goto tr86;
	goto tr73;
case 73:
	if ( (*p) == 101 )
		goto tr87;
	goto tr73;
case 74:
	if ( (*p) == 115 )
		goto tr88;
	goto tr73;
case 75:
	if ( (*p) == 101 )
		goto tr89;
	goto tr73;
case 76:
	if ( (*p) == 116 )
		goto tr90;
	goto tr73;
case 77:
	if ( (*p) == 61 )
		goto tr91;
	goto tr73;
case 78:
	switch( (*p) ) {
		case 34: goto tr92;
		case 39: goto tr92;
	}
	goto tr73;
case 79:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr93;
	goto tr73;
case 80:
	switch( (*p) ) {
		case 34: goto tr94;
		case 39: goto tr94;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr93;
	goto tr73;
case 81:
	if ( (*p) == 100 )
		goto tr96;
	goto tr95;
case 82:
	if ( (*p) == 61 )
		goto tr97;
	goto tr95;
case 83:
	switch( (*p) ) {
		case 34: goto tr98;
		case 39: goto tr98;
	}
	goto tr95;
case 84:
	if ( (*p) == 45 )
		goto tr99;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr100;
	goto tr95;
case 85:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr100;
	goto tr95;
case 86:
	switch( (*p) ) {
		case 34: goto tr101;
		case 39: goto tr101;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr100;
	goto tr95;
case 87:
	switch( (*p) ) {
		case 32: goto tr102;
		case 61: goto tr103;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr102;
	goto tr73;
case 88:
	switch( (*p) ) {
		case 34: goto tr104;
		case 39: goto tr104;
	}
	goto tr73;
case 89:
	switch( (*p) ) {
		case 34: goto tr73;
		case 39: goto tr73;
	}
	goto tr105;
case 90:
	switch( (*p) ) {
		case 34: goto tr106;
		case 39: goto tr106;
	}
	goto tr105;
case 91:
	switch( (*p) ) {
		case 97: goto tr107;
		case 111: goto tr108;
	}
	goto tr73;
case 92:
	if ( (*p) == 116 )
		goto tr109;
	goto tr73;
case 93:
	if ( (*p) == 61 )
		goto tr110;
	goto tr73;
case 94:
	switch( (*p) ) {
		case 34: goto tr111;
		case 39: goto tr111;
	}
	goto tr73;
case 95:
	if ( (*p) == 45 )
		goto tr112;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr113;
	goto tr73;
case 96:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr113;
	goto tr73;
case 97:
	switch( (*p) ) {
		case 34: goto tr114;
		case 39: goto tr114;
		case 46: goto tr115;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr113;
	goto tr73;
case 98:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr116;
	goto tr73;
case 99:
	switch( (*p) ) {
		case 34: goto tr114;
		case 39: goto tr114;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr116;
	goto tr73;
case 100:
	if ( (*p) == 110 )
		goto tr117;
	goto tr73;
case 101:
	if ( (*p) == 61 )
		goto tr118;
	goto tr73;
case 102:
	switch( (*p) ) {
		case 34: goto tr119;
		case 39: goto tr119;
	}
	goto tr73;
case 103:
	if ( (*p) == 45 )
		goto tr120;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr121;
	goto tr73;
case 104:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr121;
	goto tr73;
case 105:
	switch( (*p) ) {
		case 34: goto tr122;
		case 39: goto tr122;
		case 46: goto tr123;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr121;
	goto tr73;
case 106:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr124;
	goto tr73;
case 107:
	switch( (*p) ) {
		case 34: goto tr122;
		case 39: goto tr122;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr124;
	goto tr73;
case 108:
	if ( (*p) == 101 )
		goto tr125;
	goto tr73;
case 109:
	if ( (*p) == 102 )
		goto tr126;
	goto tr73;
case 110:
	if ( (*p) == 61 )
		goto tr127;
	goto tr73;
case 111:
	switch( (*p) ) {
		case 34: goto tr128;
		case 39: goto tr128;
	}
	goto tr73;
case 112:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr129;
	goto tr73;
case 113:
	switch( (*p) ) {
		case 34: goto tr131;
		case 39: goto tr131;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr129;
	goto tr130;
case 621:
	switch( (*p) ) {
		case 32: goto tr193;
		case 60: goto tr664;
		case 97: goto tr665;
		case 99: goto tr666;
		case 105: goto tr667;
		case 107: goto tr102;
		case 108: goto tr668;
		case 114: goto tr669;
		case 116: goto tr670;
		case 117: goto tr671;
		case 118: goto tr672;
	}
	if ( 9 <= (*p) && (*p) <= 13 )
		goto tr193;
	goto tr683;
case 114:
	if ( (*p) == 105 )
		goto tr132;
	goto tr73;
case 115:
	if ( (*p) == 109 )
		goto tr133;
	goto tr73;
case 116:
	if ( (*p) == 101 )
		goto tr134;
	goto tr73;
case 117:
	if ( (*p) == 115 )
		goto tr135;
	goto tr73;
case 118:
	if ( (*p) == 116 )
		goto tr136;
	goto tr73;
case 119:
	if ( (*p) == 97 )
		goto tr137;
	goto tr73;
case 120:
	if ( (*p) == 109 )
		goto tr138;
	goto tr73;
case 121:
	if ( (*p) == 112 )
		goto tr139;
	goto tr73;
case 122:
	if ( (*p) == 61 )
		goto tr140;
	goto tr73;
case 123:
	switch( (*p) ) {
		case 34: goto tr141;
		case 39: goto tr141;
	}
	goto tr73;
case 124:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr142;
	goto tr73;
case 125:
	if ( (*p) == 45 )
		goto tr143;
